--- a/Pan/Info.plist
+++ b/Pan/Info.plist
@@ -6,6 +6,8 @@
 	<string>포토라이브러리 접근</string>
 	<key>NSCameraUsageDescription</key>
 	<string>카메라 기능 접근</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>마이크 기능 접근</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
